--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: lfcShrinkCheck
+Package: mirrorCheck
 Type: Package
 Title: Facilitator functions for getting and assessing DESeq2 lfcShrink results
 Version: 0.0.1.0
@@ -20,5 +20,5 @@ Imports:
     VennDiagram
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
-URL: https://github.com/kescull/lfcShrinkCheck
-BugReports: https://github.com/kescull/lfcShrinkCheck/issues
+URL: https://github.com/kescull/mirrorCheck
+BugReports: https://github.com/kescull/mirrorCheck/issues
