--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Title: Facilitator functions for getting and assessing DESeq2 lfcShrink results
 Version: 0.0.1.0
 Authors@R: person("Kate", "Scull", email = "kate.scull@monash.edu",
   role = c("aut", "cre"))
+Description: mirrorCheck is intended to facilitate use and understanding of the DESeq2 package especially when using lfcShrink with the apeglm algorithm. It includes two functions aimed at getting and assessing DESeq2 lfcShrink results.
 License: `use_mit_license()`
 Encoding: UTF-8
 biocViews:
@@ -18,7 +19,6 @@ Imports:
     tibble,
     UpSetR,
     VennDiagram
-RoxygenNote: 7.3.1
-Roxygen: list(markdown = TRUE)
 URL: https://github.com/kescull/mirrorCheck
 BugReports: https://github.com/kescull/mirrorCheck/issues
+RoxygenNote: 7.3.1
